# JobSikari

./: .env.dist  .gitignore  Dockerfile  MATCHING_IMPLEMENTATION.md  README.md  SEEDING_GUIDE.md  SEED_IMPLEMENTATION.md  TODO.md  justfile  manage.py  pyproject.toml  requirements.txt  start.sh
.github/: copilot-instructions.md
jobs/: admin.py  filters.py  models.py  schema.py  views.py
jobs/management/commands/: seed_jobs.py
jobs/migrations/: 0001_initial.py
resources/: admin.py  filters.py  models.py  schema.py  views.py
resources/management/commands/: seed_resources.py
resources/migrations/: 0001_initial.py
sikari/: api.py  asgi.py  settings.py  urls.py  wsgi.py
templates/admin/: index.html
users/: admin.py  dashboard.py  matching.py  models.py  schema.py  test_matching.py  tests.py  views.py
users/management/commands/: seed_all.py
users/migrations/: 0001_initial.py  0002_alter_user_managers_alter_user_email_and_more.py  0003_careers_skill_userprofile.py  0004_add_cv_text.py  0005_userprofile_suggested_roles.py  0006_userprofile_cv_full.py  0007_generatedcv.py  0008_generatedroadmap_delete_generatedcv.py  0009_project.py  0010_alter_userprofile_education_and_more.py  0011_alter_userprofile_experience.py
