[project]
name = "jobsikari"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.8",
    "django-cleanup>=9.0.0",
    "django-environ>=0.12.0",
    "django-filter>=25.2",
    "django-lifecycle>=1.2.4",
    "django-ninja>=1.4.5",
    "django-ninja-extra>=0.30.2",
    "django-ninja-jwt>=5.4.0",
    "django-storages[s3]>=1.14.6",
    "django-unfold>=0.71.0",
    "gunicorn>=23.0.0",
    "pypdf>=6.2.0",
    "requests>=2.32.5",
    "yt-dlp>=2025.11.12",
]

[tool.ruff]
exclude = [
    "*/migrations/*.py",
]
